# smoosh

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release-candidate.yml
src/smoosh/: __init__.py  cli.py
src/smoosh/analyzer/: __init__.py  repository.py  tree.py
src/smoosh/composer/: concatenator.py  formatter.py
src/smoosh/utils/: __init__.py  config.py  file_utils.py  gitignore.py  logger.py  path_resolver.py
tests/: test_cli.py  test_format.py
tests/data/sample_repo/: README.md  pyproject.toml
tests/data/sample_repo/src/sampledata/: __init__.py
tests/data/sample_repo/src/sampledata/api/: client.py
tests/data/sample_repo/src/sampledata/core/: processor.py
tests/data/sample_repo/src/sampledata/db/: storage.py
tests/data/sample_repo/src/sampledata/utils/: config.py
tests/data/sample_repo/tests/: test_processor.py  test_processor.txt
tests/utils/: generate_sample.py
